# hotstuff

benchmark/: fabfile.py  settings.json
benchmark/aws/: remote.py
benchmark/benchmark/: aggregator.py  local.py  plot.py
benchmark/plots/: agg-4-any-512.txt  agg-4-x-512.txt  agg-x-any-512.txt
benchmark/results/: bench-4-0-512.txt  bench-4-10-512.txt  bench-4-1000-512.txt  bench-4-10000-512.txt  bench-4-12000-512.txt  bench-4-14000-512.txt  bench-4-15000-512.txt  bench-4-16000-512.txt  bench-4-18000-512.txt  bench-4-2000-512.txt  bench-4-20000-512.txt  bench-4-22000-512.txt  bench-4-24000-512.txt  bench-4-25000-512.txt  bench-4-26000-512.txt  bench-4-28000-512.txt  bench-4-3000-512.txt  bench-4-30000-512.txt  bench-4-4000-512.txt  bench-4-40000-512.txt  bench-4-5000-512.txt  bench-4-6000-512.txt  bench-4-8000-512.txt  bench-6-4000-512.txt  bench-6-6000-512.txt  bench-7-10000-512.txt  bench-7-12000-512.txt  bench-7-4000-512.txt  bench-7-6000-512.txt  bench-7-8000-512.txt
consensus/src/: aggregator.rs  config.rs  consensus.rs  core.rs  error.rs  leader.rs  lib.rs  mempool.rs  messages.rs  synchronizer.rs
consensus/src/tests/: common.rs  consensus_tests.rs  core_tests.rs  mempool_tests.rs  synchronizer_tests.rs
node/src/: node.rs
store/: Cargo.toml
