[package]
name = "store"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb.git", branch = "master" }
tokio = { version = "1.1.0", features = ["sync", "macros", "rt"] }
